--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "bootstrap": "5.2.2",
+    "moment": "^2.29.4",
     "vee-validate": "^4.7.2",
     "vue": "^3.2.41"
   },
