--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^2.6.1",
     "axios": "^1.1.3",
     "bootstrap": "5.2.2",
     "moment": "^2.29.4",
     "vee-validate": "^4.7.2",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
